fix(closedcaptionsfeed): caption body alignment

--- a/components/Player/ClosedCaptionsFeed/ClosedCaptionsFeed.module.scss
+++ b/components/Player/ClosedCaptionsFeed/ClosedCaptionsFeed.module.scss
@@ -147,6 +147,10 @@ $feed-max-width: calc(65ch + #{$caption-body-padding} * 2);
   font-size: clamp(1rem, 3cqi, 1.3rem);
   font-weight: bold;
 
+  & + .captionBody {
+    justify-self: auto;
+  }
+
   @include theme.light-child {
     color: color-mix(in lab, var(--_cc-speaker--color), black 20%);
   }
@@ -156,6 +160,8 @@ $feed-max-width: calc(65ch + #{$caption-body-padding} * 2);
   --_cc-body--background-color: var(--cc-body--background-color);
   --_cc-body--background-blur: var(--cc-body--background-blur, 0);
   --_cc-body--border-width: 1px;
+
+  justify-self: start;
   position: relative;
   isolation: isolate;
   overflow: hidden;
